# pdf-converter

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  i18n.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  supervisord.conf  vite.config.ts
.claude/skills/pdf-converter/: SKILL.md
.claude/skills/pdf-converter/scripts/: reconcile.py
.claude/skills/pdf-extract/: SKILL.md
.claude/skills/pdf-extract/scripts/: reconcile.py
.github/workflows/: ci.yml
apps/server/: package.json  tsconfig.json  vite.config.ts
apps/server/src/: app.test.ts  app.ts  auth.ts  config.ts  db.test.ts  db.ts  download.test.ts  index.ts  mcp-stdio.ts  openapi.ts  preflight.ts  safe-resolve.test.ts  safe-resolve.ts  sse.ts  upload.ts
apps/spa/: index.html  package.json  tsconfig.json  vite.config.ts
apps/spa/src/: App.tsx  main.tsx  styles.css
apps/spa/src/components/: JobCard.tsx  LanguageMenu.tsx  PreviewModal.tsx
apps/spa/src/lib/: api.test.ts  api.ts  format.test.ts  format.ts  i18n.tsx  jobs.ts  toast.tsx
db/: schema.sql
static/: index.html
worker/: pyproject.toml
worker/src/worker/: __init__.py  child.py  config.py  docparse.py  docparse_digital.py  engines.py  i18n.py  models.py  office.py  postprocess.py  probe.py  run.py  s2t.py  searchable_pdf.py  store.py  text_utils.py
worker/tests/: test_child.py  test_docparse.py  test_docparse_digital.py  test_office.py  test_postprocess.py  test_probe.py  test_run.py  test_searchable_pdf.py  test_store.py  test_text.py
